Updated files to understand better the code

--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, inital-scale=1.0">
-        <style></style>
-        <script src="./script.js"></script>
-        <title>
-            Rock Paper Scissors
-        </title>
+        <title>Rock, Paper Scissors</title>
+    <script src="./script.js"></script>
     </head>
-        <h1>Play Rock Paper Scissors</h1>
-        <button onclick="playGame()">Start Game</button>
-    <head>
+    <body>
 
-    </head>
+    </body>
 </html>
